# PINochIO

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  gpioctl.py  pinochio.py  pyproject.toml  pytest.ini  requirements.txt
.github/rulesets/: protect-develop.json  protect-main.json
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_application.py  test_domain.py  test_infrastructure.py  test_module_api.py  test_packaging.py  test_presentation_cli.py  test_presentation_tui.py
